[gd_scene load_steps=41 format=2]

[ext_resource path="res://Bingus Assets/graphics/flopilotattack/flopilot2.png" type="Texture" id=1]
[ext_resource path="res://Bingus Assets/graphics/flopilotattack/flopilot1.png" type="Texture" id=2]
[ext_resource path="res://Bingus Assets/graphics/flopilotattack/flopilot3.png" type="Texture" id=3]
[ext_resource path="res://Bingus Assets/graphics/flopilotattack/flopilot4.png" type="Texture" id=4]
[ext_resource path="res://Bosses/FlopilotArm.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/11.png" type="Texture" id=6]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/5.png" type="Texture" id=7]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/0.png" type="Texture" id=8]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/2.png" type="Texture" id=9]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/1.png" type="Texture" id=10]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/6.png" type="Texture" id=11]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/4.png" type="Texture" id=12]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/10.png" type="Texture" id=13]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/13.png" type="Texture" id=14]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/3.png" type="Texture" id=15]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/16.png" type="Texture" id=16]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/15.png" type="Texture" id=17]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/8.png" type="Texture" id=18]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/7.png" type="Texture" id=19]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/14.png" type="Texture" id=20]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/9.png" type="Texture" id=21]
[ext_resource path="res://Bingus Assets/graphics/explosiondrone/12.png" type="Texture" id=22]
[ext_resource path="res://Bosses/Flopilot.gd" type="Script" id=23]
[ext_resource path="res://Enemies/GenericDarkBullet.tscn" type="PackedScene" id=24]
[ext_resource path="res://Enemies/GenericLightBullet.tscn" type="PackedScene" id=25]
[ext_resource path="res://Bingus Assets/sounds/explosion2.wav" type="AudioStream" id=26]
[ext_resource path="res://Bosses/DarkSpiralBullet.tscn" type="PackedScene" id=27]
[ext_resource path="res://Bosses/LightSpiralBullet.tscn" type="PackedScene" id=28]
[ext_resource path="res://Bosses/FlopilotFire.tscn" type="PackedScene" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": false,
"name": "explosion",
"speed": 20.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
} ]

[sub_resource type="Animation" id=4]
resource_name = "flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "shipexplosionfade"
length = 0.68
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.68 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.309804 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 150.0
height = 92.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 35.0
height = 5.29413

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 22 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 16 ) ],
"loop": false,
"name": "explosion",
"speed": 13.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "fade"
length = 0.64
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.227451 ) ]
}

[node name="Flopilot" type="Area2D"]
position = Vector2( 1425, 364 )
scale = Vector2( 0.85, 0.85 )
z_index = -1
collision_layer = 1024
collision_mask = 199
script = ExtResource( 23 )
__meta__ = {
"_edit_vertical_guides_": [ 1081.0, 1330.0, 1425.0 ]
}
lightbullet = ExtResource( 25 )
darkbullet = ExtResource( 24 )
lightspiralbullet = ExtResource( 28 )
darkspiralbullet = ExtResource( 27 )
arm = ExtResource( 5 )
fireplatform = ExtResource( 29 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/flash = SubResource( 4 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="AnimatedSprite"]
anims/shipexplosionfade = SubResource( 5 )

[node name="HeadHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 9, 1 )
shape = SubResource( 2 )

[node name="EyeArea" type="Area2D" parent="."]
scale = Vector2( 1, 1 )
collision_layer = 1024
collision_mask = 199

[node name="EyeHitbox" type="CollisionShape2D" parent="EyeArea"]
position = Vector2( -108.235, 7.05881 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="BulletFirePoint" type="Position2D" parent="."]
position = Vector2( -132, 9 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -6.303

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -82, -64 )
frames = SubResource( 6 )
animation = "explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2"]
anims/fade = SubResource( 7 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 96, 73 )
frames = SubResource( 6 )
animation = "explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite3"]
anims/fade = SubResource( 8 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 115, -69 )
frames = SubResource( 6 )
animation = "explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite4"]
anims/fade = SubResource( 9 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -77, 52 )
frames = SubResource( 6 )
animation = "explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite5"]
anims/fade = SubResource( 10 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, 8 )
frames = SubResource( 6 )
animation = "explosion"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite6"]
anims/fade = SubResource( 11 )

[node name="ArmTimerFirstPhase" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BulletStreamFirstPhase" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BulletDelayTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="LightBulletSpawner" type="Position2D" parent="."]
position = Vector2( -130, 10 )
rotation = -2.70526

[node name="LightBulletSpawner2" type="Position2D" parent="."]
position = Vector2( -130, 10 )
rotation = -2.87979

[node name="BulletRotationTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DarkBulletSpawner" type="Position2D" parent="."]
position = Vector2( -130, 10 )
rotation = -3.49066

[node name="DarkBulletSpawner2" type="Position2D" parent="."]
position = Vector2( -130, 10 )
rotation = -3.31613

[connection signal="body_entered" from="." to="." method="_on_Flopilot_body_entered"]
[connection signal="area_entered" from="EyeArea" to="." method="_on_EyeArea_area_entered"]
[connection signal="timeout" from="ArmTimerFirstPhase" to="." method="_on_ArmTimerFirstPhase_timeout"]
[connection signal="timeout" from="BulletStreamFirstPhase" to="." method="_on_BulletStreamFirstPhase_timeout"]
[connection signal="timeout" from="BulletDelayTimer" to="." method="_on_BulletDelayTimer_timeout"]
[connection signal="timeout" from="BulletRotationTimer" to="." method="_on_BulletRotationTimer_timeout"]
